--- a/期末.html
+++ b/期末.html
@@ -52,7 +52,7 @@ font-size:20px; }
 <h4><address>
 Written by 子渣<br>
 <a href="dtjh@mail.dtjh.ptc.edu.tw">Email us</a><br>
-Address: 90077屏東縣屏東市和平路429號 <br>
+Address: 高雄市鼓山區大榮街43巷 <br>
 Phone: 08-7663916
 </address></h4>
 <a href="#first">回到頁面頂層</a>
